--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Yeti Sports 1</h1>
     <!-- Вставка Flash-игры -->
-    <embed src="https://github.com/Niki-ia/Yeti_Game/blob/a8e4dd10d4c52327a8867a2097f886064ae2a989/yetisports1free.swf" width="800" height="600">
+    <embed src="https://niki-ia.github.io/Yeti_Game/yetisports1free.swf" width="800" height="600">
 </body>
 </html>
