--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Yeti Sports 1</h1>
     <!-- Вставка Flash-игры -->
-    <embed src="yetisports1free.swf" width="800" height="600">
+    <embed src="https://niki-ia.github.io/Yeti_Game/yetisports1free.swf" width="800" height="600">
 </body>
 </html>
