--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             document.getElementById("flash-container").appendChild(player);
 
             // Загружаем файл SWF
-            player.load({ url: "yetisports1free.swf" });
+            player.load({ url: "https://github.com/Niki-ia/Yeti_Game/blob/b9782f7f77d2869162f42d4b29314f0362a174de/yetisports1free.swf" });
         } else {
             console.error("RufflePlayer не найден. Убедитесь, что скрипт подключён.");
         }
