--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Контейнер для игры -->
     <div id="flash-container" style="width: 800px; height: 600px;">
         <!-- Автоматическая загрузка SWF -->
-        <object type="application/x-shockwave-flash" data="https://github.com/Niki-ia/Yeti_Game/blob/main/yetisports1free.swf" width="800" height="600">
+        <object type="application/x-shockwave-flash" data="yetisports1free.swf" width="800" height="600">
             <param name="movie" value="yetisports1free.swf" />
         </object>
     </div>
