--- a/index.html
+++ b/index.html
@@ -13,20 +13,15 @@
     <div id="flash-container" style="width: 800px; height: 600px;"></div>
 
     <script>
-        // Проверяем наличие Ruffle
-        if (window.RufflePlayer) {
-            const ruffle = window.RufflePlayer.newest();
-            const player = ruffle.createPlayer();
-            document.getElementById("flash-container").appendChild(player);
+        // Подключаем Ruffle к странице
+        window.RufflePlayer = window.RufflePlayer || {};
+        const ruffle = window.RufflePlayer.newest();
+        const player = ruffle.createPlayer();
+        document.getElementById("flash-container").appendChild(player);
 
-            // Загружаем файл SWF
-            player.load("yetisports1free.swf");
-        } else {
-            console.error("RufflePlayer не найден. Убедитесь, что скрипт подключён.");
-        }
+        // Указываем файл SWF
+        player.load("yetisports1free.swf");
     </script>
 </body>
 </html>
-
-
 
