--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         // Загружаем SWF-файл
         player.load({
-            url: "yetisports1free.swf"
+            url: "https://github.com/Niki-ia/Yeti_Game/blob/main/yetisports1free.swf"
         });
     </script>
 </body>
