--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
     <div id="flash-container" style="width: 800px; height: 600px;"></div>
 
     <script>
-        // Создаём экземпляр Ruffle
-        const ruffle = window.RufflePlayer.newest();
-        const player = ruffle.createPlayer();
-        document.getElementById("flash-container").appendChild(player);
+        // Проверяем наличие Ruffle
+        if (window.RufflePlayer) {
+            const ruffle = window.RufflePlayer.newest();
+            const player = ruffle.createPlayer();
+            document.getElementById("flash-container").appendChild(player);
 
-        // Загружаем SWF-файл
-        player.load({
-            url: "https://github.com/Niki-ia/Yeti_Game/blob/main/yetisports1free.swf"
-        });
+            // Загружаем файл SWF
+            player.load("yetisports1free.swf");
+        } else {
+            console.error("RufflePlayer не найден. Убедитесь, что скрипт подключён.");
+        }
     </script>
 </body>
 </html>
