--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             document.getElementById("flash-container").appendChild(player);
 
             // Загружаем файл SWF
-            player.load("yetisports1free.swf");
+            player.load("https://github.com/Niki-ia/Yeti_Game/blob/main/yetisports1free.swf");
         } else {
             console.error("RufflePlayer не найден. Убедитесь, что скрипт подключён.");
         }
