--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yetisports 1</title>
+    <title>Yetisports: Penguin Throw </title>
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 </head>
 <body>
